--- a/Am I the last/Am I the last.vcxproj.filters
+++ b/Am I the last/Am I the last.vcxproj.filters
@@ -16,32 +16,32 @@
     <Filter Include="Data">
       <UniqueIdentifier>{507af122-a6fc-495e-9cd2-48a7ca9f768e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Entety">
-      <UniqueIdentifier>{f1a2c437-f6f7-459d-8ff8-f1a938135888}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Class + header">
-      <UniqueIdentifier>{9ae2c5e5-966e-4cc5-8ea7-e3fe6767f11b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Class + header\Game">
-      <UniqueIdentifier>{7cd43c9c-3156-4089-af62-f28dbdf01172}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Class + header\States">
-      <UniqueIdentifier>{a36dc619-f3ff-4652-9fa4-a253e18fb16e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Data\Fonts">
       <UniqueIdentifier>{161a6f35-a9ad-4160-b9b0-c0152ea8174d}</UniqueIdentifier>
     </Filter>
     <Filter Include="Resource Files\Buttons">
       <UniqueIdentifier>{d35bf758-7739-4658-8c4b-81cae0c0e696}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Class + header\States\Meniu_states">
+    <Filter Include="SRC">
+      <UniqueIdentifier>{9ae2c5e5-966e-4cc5-8ea7-e3fe6767f11b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SRC\Game">
+      <UniqueIdentifier>{7cd43c9c-3156-4089-af62-f28dbdf01172}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SRC\States">
+      <UniqueIdentifier>{a36dc619-f3ff-4652-9fa4-a253e18fb16e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SRC\States\Meniu_states">
       <UniqueIdentifier>{dde731df-6850-4acf-984d-5aa518414cef}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Class + header\Citys">
+    <Filter Include="SRC\Citys">
       <UniqueIdentifier>{bac4b7d2-20d8-4922-9878-cc25098539c7}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Class + header\Citys\StartingCity">
+    <Filter Include="SRC\Citys\StartingCity">
       <UniqueIdentifier>{ce57c61c-9366-456c-a9f0-c015a632e13b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SRC\Entety">
+      <UniqueIdentifier>{f1a2c437-f6f7-459d-8ff8-f1a938135888}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -49,66 +49,66 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Game.cpp">
-      <Filter>Class + header\Game</Filter>
+      <Filter>SRC\Game</Filter>
     </ClCompile>
     <ClCompile Include="State.cpp">
-      <Filter>Class + header\States</Filter>
+      <Filter>SRC\States</Filter>
     </ClCompile>
     <ClCompile Include="Entity.cpp">
-      <Filter>Entety</Filter>
+      <Filter>SRC\Entety</Filter>
     </ClCompile>
     <ClCompile Include="Button.cpp">
-      <Filter>Entety</Filter>
+      <Filter>SRC\Entety</Filter>
     </ClCompile>
     <ClCompile Include="Main_meniu_state.cpp">
-      <Filter>Class + header\States\Meniu_states</Filter>
+      <Filter>SRC\States\Meniu_states</Filter>
     </ClCompile>
     <ClCompile Include="Settings_meniu_state.cpp">
-      <Filter>Class + header\States\Meniu_states</Filter>
+      <Filter>SRC\States\Meniu_states</Filter>
     </ClCompile>
     <ClCompile Include="Resolution_meniu_state.cpp">
-      <Filter>Class + header\States\Meniu_states</Filter>
+      <Filter>SRC\States\Meniu_states</Filter>
     </ClCompile>
     <ClCompile Include="Player_top.cpp">
-      <Filter>Entety</Filter>
+      <Filter>SRC\Entety</Filter>
     </ClCompile>
     <ClCompile Include="Building.cpp">
-      <Filter>Entety</Filter>
+      <Filter>SRC\Entety</Filter>
     </ClCompile>
     <ClCompile Include="StartingCity.cpp">
-      <Filter>Class + header\Citys\StartingCity</Filter>
+      <Filter>SRC\Citys\StartingCity</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
-      <Filter>Class + header\Game</Filter>
+      <Filter>SRC\Game</Filter>
     </ClInclude>
     <ClInclude Include="State.h">
-      <Filter>Class + header\States</Filter>
+      <Filter>SRC\States</Filter>
     </ClInclude>
     <ClInclude Include="Entity.h">
-      <Filter>Entety</Filter>
+      <Filter>SRC\Entety</Filter>
     </ClInclude>
     <ClInclude Include="Button.h">
-      <Filter>Entety</Filter>
+      <Filter>SRC\Entety</Filter>
     </ClInclude>
     <ClInclude Include="Main_meniu_state.h">
-      <Filter>Class + header\States\Meniu_states</Filter>
+      <Filter>SRC\States\Meniu_states</Filter>
     </ClInclude>
     <ClInclude Include="Settings_meniu_state.h">
-      <Filter>Class + header\States\Meniu_states</Filter>
+      <Filter>SRC\States\Meniu_states</Filter>
     </ClInclude>
     <ClInclude Include="Resolution_meniu_state.h">
-      <Filter>Class + header\States\Meniu_states</Filter>
+      <Filter>SRC\States\Meniu_states</Filter>
     </ClInclude>
     <ClInclude Include="Player_top.h">
-      <Filter>Entety</Filter>
+      <Filter>SRC\Entety</Filter>
     </ClInclude>
     <ClInclude Include="Building.h">
-      <Filter>Entety</Filter>
+      <Filter>SRC\Entety</Filter>
     </ClInclude>
     <ClInclude Include="StartingCity.h">
-      <Filter>Class + header\Citys\StartingCity</Filter>
+      <Filter>SRC\Citys\StartingCity</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
