--- a/Am I the last/Am I the last.vcxproj
+++ b/Am I the last/Am I the last.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Main_meniu_state.cpp" />
+    <ClCompile Include="Math.cpp" />
     <ClCompile Include="Player_top.cpp" />
     <ClCompile Include="Resolution_meniu_state.cpp" />
     <ClCompile Include="Settings_meniu_state.cpp" />
@@ -37,6 +38,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Main_meniu_state.h" />
+    <ClInclude Include="Math.h" />
     <ClInclude Include="Player_top.h" />
     <ClInclude Include="Resolution_meniu_state.h" />
     <ClInclude Include="Settings_meniu_state.h" />
