--- a/Am I the last/Am I the last.vcxproj.filters
+++ b/Am I the last/Am I the last.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="Resource Files\Maps">
       <UniqueIdentifier>{ceec1299-e56d-4e19-8a68-15bccaf1a0e2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="SRC\Util">
+      <UniqueIdentifier>{705ff14d-411b-408a-a3ae-fa043eadfdf8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -81,6 +84,9 @@
     <ClCompile Include="StartingCity.cpp">
       <Filter>SRC\Citys\StartingCity</Filter>
     </ClCompile>
+    <ClCompile Include="Math.cpp">
+      <Filter>SRC\Util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -112,6 +118,9 @@
     </ClInclude>
     <ClInclude Include="StartingCity.h">
       <Filter>SRC\Citys\StartingCity</Filter>
+    </ClInclude>
+    <ClInclude Include="Math.h">
+      <Filter>SRC\Util</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
