--- a/Am I the last/Am I the last.vcxproj
+++ b/Am I the last/Am I the last.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Building.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="FirstVillage.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Main_meniu_state.cpp" />
@@ -37,6 +38,7 @@
     <ClInclude Include="Building.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="FirstVillage.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Main_meniu_state.h" />
     <ClInclude Include="Math.h" />
