Ignore files that change often

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /Am I the last/City/StartingCity/data.txt
 /Am I the last/City/FirstVillage/data.txt
+/Am I the last/Settings/Window_settings.txt
