Save last state the player was on

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 /Am I the last/City/StartingCity/data.txt
 /Am I the last/City/FirstVillage/data.txt
 /Am I the last/Settings/Window_settings.txt
+/Am I the last/Settings/LastState.txt
