--- a/Am I the last/Am I the last.vcxproj
+++ b/Am I the last/Am I the last.vcxproj
@@ -52,7 +52,13 @@
     <ClInclude Include="StateManager.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Settings\Game_state_keybinds.txt" />
+    <Text Include="Settings\Game_state_settings.txt" />
+    <Text Include="Settings\LastState.txt" />
+    <Text Include="Settings\Main_meniu_state_keybinds.txt" />
+    <Text Include="Settings\Supported_keys.txt" />
     <Text Include="Settings\Window_settings.txt" />
+    <Text Include="Settings\World_data.txt" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="Fonts\Kremlin Bolshevik Bold.ttf" />
