--- a/Am I the last/Am I the last.vcxproj.filters
+++ b/Am I the last/Am I the last.vcxproj.filters
@@ -154,6 +154,24 @@
     <Text Include="Settings\Window_settings.txt">
       <Filter>Data</Filter>
     </Text>
+    <Text Include="Settings\Game_state_keybinds.txt">
+      <Filter>Data</Filter>
+    </Text>
+    <Text Include="Settings\Game_state_settings.txt">
+      <Filter>Data</Filter>
+    </Text>
+    <Text Include="Settings\LastState.txt">
+      <Filter>Data</Filter>
+    </Text>
+    <Text Include="Settings\Main_meniu_state_keybinds.txt">
+      <Filter>Data</Filter>
+    </Text>
+    <Text Include="Settings\Supported_keys.txt">
+      <Filter>Data</Filter>
+    </Text>
+    <Text Include="Settings\World_data.txt">
+      <Filter>Data</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <Font Include="Fonts\Kremlin Bolshevik Bold.ttf">
