Basic animation manager Added

--- a/Am I the last/Am I the last.vcxproj
+++ b/Am I the last/Am I the last.vcxproj
@@ -77,6 +77,7 @@
     <Font Include="Fonts\MKyrill-Bold.ttf" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Textures\Buildings\house_0.png" />
     <Image Include="Textures\Buttons\Audio.png" />
     <Image Include="Textures\Buttons\Back.png" />
     <Image Include="Textures\Buttons\Difficulty.png" />
